# athena

./: Cargo.toml  README.md
example/: a.zson  b.zson  c.md  hi.txt
src/: main.rs
src/core/: config.rs  mod.rs
src/core/entity/: id.rs  link.rs  mod.rs
src/core/entity/file/: mod.rs
src/core/entity/zettel/: mod.rs
src/core/entity/zettel/document/: block.rs  mod.rs  node.rs
src/core/entity/zettel/parts/: body.rs  header.rs  mod.rs
src/core/io/: resource.rs
src/core/io/resource/: file.rs  mod.rs  types.rs
src/core/repo/: cache.rs  info.rs  mod.rs
src/core/semantic/: mod.rs  tag.rs
src/core/vault/: event.rs  files.rs  mod.rs
src/core/vault/caching/: mod.rs  storage.rs
src/core/vault/files/: mod.rs  storage.rs
src/core/vault/resource/: file.rs  mod.rs  types.rs
src/core/vault/volume/: mod.rs  path.rs
src/core/vault/volume/volumes/: directory.rs  email.rs  mod.rs
src/core/zettel/: mod.rs
src/core/zettel/document/: block.rs  element.rs  mod.rs  node.rs
src/core/zettel/document/conversions/: html.rs  json.rs  markdown.rs  mod.rs
src/formats/: mod.rs
src/formats/markdown/: converter.rs  mod.rs  parser.rs
src/semantic/: knowledge.rs  mod.rs
src/util/: embedding.rs  hashing.rs  mod.rs  snapshotting.rs
src/volt/: mod.rs
src/volt/repo/: cache.rs  flags.rs  mod.rs
src/volt/resource/: cache.rs  file.rs  mod.rs
src/volt/volume/: cache.rs  mod.rs
src/web/: mod.rs  pages.rs
src/web/pages/: error.rs  mod.rs
src/web/pages/content/: zettel.rs
src/web/routes/: mod.rs
static/: css.css
(+4 files in other folders)
