[package]
name = "athena"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
maud = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
yaml-rust2 = "0.9.0"
html-escape = "0.2.13"
enum-iterator = "2.1.0"
sha256 = "1.6.0"
hex = "0.4.3"
